--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <!-- navbar starts -->
 <header>
         <!-- <a href="/" class="logo"><i class="fab fa-node-js"></i><span class="first-letter">i</span>i3xxm</a> -->
-<a href="/" class="logo" style="text-decoration: none;">
+<a  class="logo" style="text-decoration: none;">
    <span style="font-weight: 800; border: 2.5px solid #ff9a00; padding: 4px 10px; border-radius: 8px;  letter-spacing: 1px; text-transform: lowercase; font-size: 24px;">
       ii3xxm
    </span>
@@ -589,4 +589,5 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
 </html>
+
 
