--- a/index.html
+++ b/index.html
@@ -164,6 +164,14 @@
 
 <div class="bar">
     <div class="info">
+        <img src="https://img.icons8.com/color/48/figma--v1.png" alt="Figma"/>
+        <span>Figma</span>
+    </div>
+</div>
+
+
+<div class="bar">
+    <div class="info">
         <img src="https://img.icons8.com/color/60/tableau-software.png" alt="Tableau"/>
         <span>Tableau</span>
     </div>
