--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
    <span>SQL</span>
    <span>Python</span>
    <span>Power BI</span>
+   <span>Figma</span>
    <span>Tableau</span>
    <span>Power Automate</span>
 
